Fixed a bug with flex-wrap

--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    flex-wrap: wrap;
 }
 
 .quote {
@@ -139,6 +139,7 @@ body {
     padding: 50px 150px;
     justify-content: center;
     border-radius: 16px;
+    flex-wrap: wrap;
 }
 
 .copyright {
